--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -66,6 +66,59 @@
               animation-duration: 20s;
       fill: white;
     }
+
+
+
+    /* Header Animation */
+
+    .title-word {
+        animation: color-animation 4s linear infinite;
+      }
+      
+      .title-word-1 {
+        --color-1: #0981e4;
+        --color-2: #3D8DAE;
+        --color-3: #5ab2f0;
+      }
+      
+      .title-word-2 {
+        --color-1:#2356b7;
+        --color-3:  #5aa5f0;
+        --color-2: #2e54e9;
+      }
+      
+      .title-word-3 {
+        --color-1: #0981e4;
+        --color-2: #0ca5f2;
+        --color-3: #08b1ee;
+      }
+      
+      
+      @keyframes color-animation {
+        0%    {color: var(--color-1)}
+        32%   {color: var(--color-1)}
+        33%   {color: var(--color-2)}
+        65%   {color: var(--color-2)}
+        66%   {color: var(--color-3)}
+        99%   {color: var(--color-3)}
+        100%  {color: var(--color-1)}
+      }
+      
+      /* Here are just some visual styles. 🖌 */
+      
+      .container-about {
+        display: grid;
+        place-items: center;  
+        text-align: center;
+        height: 120px;
+      }
+      
+      .title {
+        font-family: "Montserrat", sans-serif;
+        font-weight: 800;
+        font-size: 70px;
+        text-transform: uppercase;
+      }
     
     @-webkit-keyframes move-forever {
       0% {
