--- a/src/components/Mission/Mission.css
+++ b/src/components/Mission/Mission.css
@@ -4,7 +4,25 @@
     height: fit-content;
     /* border: 1px solid red; */
 }
-.mission{
-    border-bottom: 4px solid #3B82F6;
+.mySwiper2{
+    width: 100%;
+    height: 200px;
+    /* border: 1px solid red; */
+    /* height:350px; */
 }
 
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter:grayscale(100%);
+    cursor: pointer;
+  }
+  .swiper-slide:hover img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter:grayscale(0%);
+  }
