--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -1,146 +1,79 @@
 .review-container{
     width: 100%;
-    height: fit-content;
-    /* border: 1px solid red; */
-    margin-top: 80px;
-}
-
-.back-text{
-    position: relative;
-    z-index: -2000;
-}
-
-
-.reviews{
-    margin-top: 50px;
-    overflow: hidden;
-}
-
-.reviews-title{
-    text-align: center;
-    margin-bottom: 7rem;
-}
-
-.reviews-title p{
-    font-family: 'Playfair Display', serif;
-    font-size: 5rem;
-    color: white;
-}
-
-.reviews-card{
-    display: grid;
-    grid-template-columns: 1fr 480px;
-    width: 781px;
-}
-
-@media (max-width: 425px){
-    .reviews-card{
-        grid-template-columns: 1fr;
-        width: fit-content;
-    }
-}
-.card-img{
-    width: fit-content;
-    height: fit-content;
-}
-
-.card-text{
-    background-color: white;
-    padding: 0rem 3rem; 
-    height: 359px;
-    overflow: hidden;
-}
-
-@media (max-width: 425px){
-    .card-text{
-        padding: 1rem 2rem;
-        width: 70vw;
-        height: fit-content;
-    }
-}
-
-.card-title p{
-    font-weight: 800;
-    font-size: 2rem;
-    line-height: 105.52%;
-}
-
-.card-para{
-    margin-top: 1rem;
-    margin-bottom: 0.8rem;
-}
-
-.card-author{
+    max-width: 1350px;
+    margin: 0 auto;
     display: flex;
     align-items: center;
-    gap: 0.3rem;
+    justify-items: center;
 }
 
+.left{
+    width: 50%;
+    height: 600px;
+    background-image: url('https://i.postimg.cc/qRrWH78M/pexels-elias-gamez-10558599-1.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 8px;
+}
 
-.reviews-row{
+.review-card{
+    max-height: 400px;
+    max-width: 100%;
+}
+
+.right{
+    width: 60%;
+    min-height: 400px;
     display: flex;
-    gap: 2rem;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+    border-radius: 8px;
+    margin-left: -150px;
 }
 
-@media (max-width: 425px){
-    .card-title p{
-        font-weight: 700;
-        font-size: 1rem;
-    }
+ /* .mySwiper {
+    width: 100%;
+    height: 100%;
+  } 
+  */
+  /* .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+  
+   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  } */
+  
+  /* .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }  */
 
-    .card-para p{
-        font-size: 0.7rem;
-    }
-
-    .card-author p{
-        font-size: 0.7rem;
-    }
-    .reviews-row{
+  @media only screen and (max-width: 767px){
+    .review-container{
         flex-direction: column;
-        margin: 0 auto;
-        width: fit-content;
     }
-    .reviews img{
-        width: 70vw;
+    .left{
+        width: 100%;
     }
-}
-
-.row-first, .row-third{
-    animation: move-first 20s linear infinite;
-    margin-bottom: 2rem;
-}
-
-.row-second{
-    transform: translateX(-1000px);
-    animation: move-second 20s linear infinite;
-    margin-bottom: 2rem;
-}
-
-
-@media (max-width: 425px){
-    .row-second, .row-third{
-        display: none;
+    .right{
+        width: 100%;
+        margin: 0;
+        margin-top: -100px;
+        /* height: auto; */
+        /* padding-top: 20px; */
     }
-
-    .row-first{
-        animation: none;
+    .swiper-slide {
+        flex-direction: column;
+        /* padding: 20px; */
     }
-}
-
-@keyframes move-first{
-    50%{
-        transform: translateX(-1000px);
+    .man{
+        margin-top: 50px;
     }
-    100%{
-        transform: translateX(0);
-    }
-}
-
-@keyframes move-second{
-    50%{
-        transform: translateX(0);
-    }
-    100%{
-        transform: translateX(-1000px);
-    }
-}
+  }
