--- a/src/components/Brands/Brands.css
+++ b/src/components/Brands/Brands.css
@@ -7,3 +7,15 @@
   background-size:auto;
   border: 1px solid red;
 } */
+
+
+@media only screen and (max-width: 767px){
+  .brand-container {
+    /* border: 1px solid red; */
+  } 
+  .yt-video{
+    /* border: 1px solid red; */
+    width: 100%;
+    height: 350px;
+  }
+}
