--- a/src/components/Mission/Mission.css
+++ b/src/components/Mission/Mission.css
@@ -32,6 +32,7 @@
       padding: 0px 20px 0px 20px;
       justify-items: center;
       text-align: center;
+      margin-top: 50px;
     }
     .heading{
       font-size: 20px;
