--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -7,7 +7,7 @@
     justify-items: center;
 }
 
-.left{
+.left-review{
     width: 50%;
     height: 600px;
     background-image: url('https://i.postimg.cc/qRrWH78M/pexels-elias-gamez-10558599-1.jpg');
@@ -59,13 +59,19 @@
     .review-container{
         flex-direction: column;
     }
-    .left{
+    .left-review{
         width: 100%;
+    height: 300px;
+    background-image: url('https://i.postimg.cc/qRrWH78M/pexels-elias-gamez-10558599-1.jpg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    border-radius: 8px;
     }
     .right{
         width: 100%;
         margin: 0;
         margin-top: -100px;
+        /* border: 1px solid red; */
         /* height: auto; */
         /* padding-top: 20px; */
     }
@@ -74,6 +80,17 @@
         /* padding: 20px; */
     }
     .man{
-        margin-top: 50px;
+        margin-top: 10px;
+    }
+    .review-card{
+        border-bottom-left-radius: 40px;
+        border-top-right-radius: 40px;
+        /* border: 1px solid red; */
+        padding-bottom: 15px;
+        height: 100%;
+        max-width: 100%;
+    }
+    .designation{
+        display: none;
     }
   }
