login page, about, home page done

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -82,9 +82,9 @@
       }
       
       .title-word-2 {
-        --color-1:#2356b7;
-        --color-3:  #5aa5f0;
-        --color-2: #2e54e9;
+        --color-1:#d411b6;
+        --color-3:  #ee4c4c;
+        --color-2: #43ed8f;
       }
       
       .title-word-3 {
