--- a/src/components/Brands/Brands.css
+++ b/src/components/Brands/Brands.css
@@ -7,6 +7,11 @@
   background-size:auto;
   border: 1px solid red;
 } */
+.yt-video{
+  /* border: 1px solid red; */
+  width: 75%;
+  height: 450px;
+}
 
 
 @media only screen and (max-width: 767px){
