--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
-#parentFooter{
+/* #parentFooter{
     position: relative;
     margin-top: 3rem;
-}
+} */
 
 .pg-footer {
     font-family: 'Roboto', sans-serif;
@@ -12,8 +12,8 @@
   .footer {
       background-color: #004658;
       color: #fff;
-      position: absolute;
-      top: 100px;
+      /* position: absolute; */
+      /* top: 100px; */
   }
   .subscribeBox{
     position: absolute;
