navbar route fixed,register page done, footer whatsapp link done

--- a/src/components/Navbar/Nav.css
+++ b/src/components/Navbar/Nav.css
@@ -5,6 +5,16 @@
 }
 .menu li:hover{
   color: #0670da;
+
+}
+
+.menu li{
+  color: black;
+}
+
+.active{
+  color:  #0670da;
+  background-color: transparent;
 }
 
 .navbar{
