--- a/src/components/Loading/Loading.css
+++ b/src/components/Loading/Loading.css
@@ -1,3 +1,12 @@
+.l {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+
 .square-wrap {
     position: fixed;
     top: 0;
