--- a/src/components/Navbar/Nav.css
+++ b/src/components/Navbar/Nav.css
@@ -13,10 +13,18 @@
 }
 
 .active{
-  color:  #0670da;
+  color:  #0670da!important;
+  background-color: transparent;
+}
+.active.active{
+  color:  #0670da!important;
   background-color: transparent;
 }
 
 .navbar{
    height: 5rem;
+}
+
+li.active {
+  background-color: transparent;
 }
