--- a/src/style/printerStyle.css
+++ b/src/style/printerStyle.css
@@ -1,5 +1,5 @@
 .printer-banner{
-    background-image: linear-gradient(rgba(12, 110, 134, 0.945), rgba(129, 131, 34, 0.493)),url('../../Assets/printer.jpg');
+    background-image: linear-gradient(rgba(12, 110, 134, 0.945), rgba(129, 131, 34, 0.493)),url('../Assets//printer.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
