--- a/src/components/Mission/Mission.css
+++ b/src/components/Mission/Mission.css
@@ -10,6 +10,12 @@
     /* border: 1px solid red; */
     /* height:350px; */
 }
+.mySwiper3{
+  width: 100%;
+  height: 200px;
+  /* border: 1px solid red; */
+  /* height:350px; */
+}
 
 .swiper-slide img {
     display: block;
