--- a/src/style/printerStyle.css
+++ b/src/style/printerStyle.css
@@ -5,5 +5,5 @@
     background-position: center;
     width: 100%;
     height: 100vh;
-    border: 5px solid red
+    /* border: 5px solid red */
 };
